# final-project-SethOkai

./: Checkpoint1.md  Pipfile  bls_data.py  checkpoint2.ipynb  fred_data.py  pyproject.toml  source.ipynb  source.py
extracted_files/: bls_unemployment_data.csv  fred_unemployment_data.csv
myen/: pyvenv.cfg
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jsonpointer
